@@ -1,6 +1,10 @@
 0.1.3:
  * allow writing to be cancelled (much) more often
+ * display filesizes
  * significant write performance improvements for (very) large numbers of files
+ * icon
+ * bug: when creating a new directory, it seems like the first file is being
+   renamed instead of the new directory
 
 0.1.2:
  * pause button when writing/extracting
